--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@
     padding: 10px;
     margin-bottom: 10px;
   }
+
+.noti {
+    color:green;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
